// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FORM ELEMENTS/NavigationButton DefaultValues smoke-test 1`] = `
<button data-testid="navigation-button-forward"
        id="navigation-button-forward"
        type="button"
        tabindex="0"
        class="navigation-button navigation-button--forward"
>
  Weiter
  <div>
  </div>
</button>
`;

exports[`FORM ELEMENTS/NavigationButton Disabled play-test 1`] = `
<button data-testid="navigation-button-forward"
        id="navigation-button-forward"
        type="button"
        tabindex="0"
        disabled
        class="navigation-button navigation-button--forward"
>
  Weiter
  <div>
  </div>
</button>
`;

exports[`FORM ELEMENTS/NavigationButton TypeBackward smoke-test 1`] = `
<button data-testid="navigation-button-backward"
        id="navigation-button-backward"
        type="button"
        tabindex="0"
        class="navigation-button navigation-button--backward"
>
  Zurück
</button>
`;

exports[`FORM ELEMENTS/NavigationButton TypeForward play-test 1`] = `
<button data-testid="navigation-button-forward"
        id="navigation-button-forward"
        type="button"
        tabindex="0"
        class="navigation-button navigation-button--forward"
>
  Weiter
  <div>
  </div>
</button>
`;

exports[`FORM ELEMENTS/NavigationButton WithCustomText smoke-test 1`] = `
<button data-testid="navigation-button-forward"
        id="navigation-button-forward"
        type="button"
        tabindex="0"
        class="navigation-button navigation-button--forward"
>
  Some custom text
  <div>
  </div>
</button>
`;
